# context0-python-backend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT0_MEMORY_SYSTEM_DOCUMENTATION.md  Dockerfile  MEMORY_SETUP.md  Makefile  README.md  context0_app.py  create_indexes.py  create_sample_data.py  debug_memory_content.py  debug_search.py  docker-compose.yml  generate_test_token.py  ngrok.yml  print_config.py  pyproject.toml  start-ngrok.sh  test_pinecone_import.py
app/: app.py  main.py  settings.py  warning.py
app/api/: base_response.py  tags.py
app/api/v1/: ping_api.py  router.py  workflow_api.py
app/common/: enums.py  role_decorator.py  startup.py
app/common/auth/: auth.py  role_decorator.py
app/common/cache/: memory_cache.py
app/common/enum/: chat.py  llm.py  llm_vendor.py  memory.py  memory_category.py  memory_emotion.py  persistence.py  system.py  user.py  workflow.py
app/common/error/: app_error.py  error_factory.py  error_handlers.py  http_error_enum.py
app/common/json_validation/: workflow_definition_schema.py
app/common/logging/: logging.py
app/config/: context_zero_config.py  default.yaml  prod.yaml
app/config/enums/: memory_type.py  (+1 more)
app/core/: auth.py  logging.py  role_decorator.py
app/db/: engine.py  indexes.py  mongodb.py  session.py
app/engine/: task_executor.py  task_executor_registry.py  workflow_execution_engine.py
app/llm/: __init__.py  base.py  configs.py  types.py
app/middleware/: auth_middleware.py
app/model/: chat.py  chat_extracted_memory.py  credential_model.py  llm_preset.py  memory_item.py  organization_model.py  user_model.py  workflow_model.py
app/reasoning/: __init__.py  engine.py  models.py
app/service/: analytics_service.py  billing_service.py  chat_service.py  credential_service.py  llm_memory_service.py  llm_service.py  memory_categorization_service.py  memory_extraction_service.py  memory_service.py  qa_service.py  tag_extraction_service.py  webhook_service.py  workflow_execution_service.py  workflow_service.py
docker-init-scripts/: init.sql
docs/: CHAT_API_REFERENCE.md  LLM_SYSTEM.md  chat_api.md  getting-clerk-token.md
tests/: README.md  __init__.py  create_sample_data.py  demo_qa.py  flush_databases.py  test_api_call.py  test_config.py  test_detailed_config.py  test_large_scale_reasoning.py  test_memory_api.py  test_multihop_reasoning.py  test_qa_system.py
wiki/: api-overview.md  index.md  installation.md  memory-system.md  memory_extraction_fixes_summary.md  overview.md  performance_optimization_analysis.md  performance_optimization_implementation.md  quickstart.md  readme.md  sitemap.md  structure.md
wiki/api/: chat-api.md  memory-api.md
wiki/config/: environment.md
(+103 files in other folders)
