[tool.poetry]
name = "context0-python-backend"
version = "0.1.0"
description = ""
authors = ["Sunildt28 <sunil@prepto.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.1" }
httpx = "^0.28.1"
pydantic = "^2.6.0"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pre-commit = "^3.4.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Optional pytest.ini
# [pytest]
# addopts = -ra
# testpaths = ["tests"]
